--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruth Kalu - Contact</title>
+    <title>Ruth Kalu - Courses</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan:ital@0;1&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="contact.html">CONTACT</a>
+                <a class="nav-link" href="contact.html">CONTACT</a>
                 </li>
                 <li class="nav-item">
                 <a class="btn btn-outline-warning btn-md" href="login.html" role="button">LOG IN</a>
@@ -39,48 +39,6 @@
             </div>
         </div>
     </nav>
-
-    <section id="about-me">
-        <div class="container" style="margin-top: 56px;">
-            <div class="container pt-5">
-                <img src="images/MaryCoaching" alt="" class="img-fluid">
-                <p class="text-center my-4 h5">
-                    Contact me with the form below to enquire about upcoming coaching, classes, and events. <br> I wont ever spam you because... who has time for that?!?
-                </p>
-            </div>
-            <hr>
-
-        </div>
-    </section>
-
-
-
-    <section id="bottom-nav">
-        <div class="container py-5">
-          <hr class="">
-          <p class="h3 text-center text-uppercase text-warning mt-5">RUTH KALU - CAREER COACH</p>
-          <nav class="mt-3">
-            <ul class="nav justify-content-center gap-3">
-              <li class="nav-item">
-                <a class="text-dark text-uppercase fw-bold link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="text-dark text-uppercase fw-bold link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="coaching.html">I:I Career Coaching</a>
-              </li>
-              <li class="nav-item">
-                <a class="text-dark text-uppercase fw-bold link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="courses.html">Online Course</a>
-              </li>
-              <li class="nav-item">
-                <a class="text-dark text-uppercase fw-bold link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="about.html">About</a>
-              </li> 
-  
-              <li class="nav-item">
-                <a class="text-dark text-uppercase fw-bold link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
