--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <section id="about-me">
+    <section id="contact-me">
         <div class="container" style="margin-top: 56px;">
             <div class="container pt-5">
                 <img src="images/MaryCoaching" alt="" class="img-fluid">
@@ -50,7 +50,59 @@
             </div>
             <hr>
 
-        </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <h2 class="text-center text-uppercase text-warning">Contact Form</h2>
+                    <form action="">
+                      <div class="mb-3 row">
+                        <div class="col-md-6">
+                          <label for="fname" class="form-label">First Name</label>
+                          <input type="text" class="form-control" placeholder="Firstname" id="fname" aria-describedby="firstname">
+                        </div>
+                        <div class="col-md-6">
+                          <label for="lname" class="form-label">Last Name</label>
+                          <input type="text" class="form-control" placeholder="Lastname" id="lname" aria-describedby="lastname">
+                        </div>
+                      </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email address</label>
+                            <input type="email" class="form-control" placeholder="email" id="email" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="subject" class="form-label">Subject</label>
+                            <input type="text" class="form-control" placeholder="Subject" id="subject">
+                        </div>
+                        <div class="mb-3">
+                            <label for="mssg" class="form-label">Message</label>
+                            <textarea class="form-control" placeholder="Message" id="mssg" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-outline-warning">Submit</button>
+                        
+                    </form>
+                </div>
+                <div class="col-md-6">
+                    <h2 class="text-center text-uppercase text-warning mb-5">Contact Details</h2>
+                    <p class="text-center h5 mb-3">
+                        <i class="bi bi-geo-alt-fill"></i> 1234 Street, City, State, Zip
+                    </p>
+                    <p class="text-center h5 mb-3">
+                        <i class="bi bi-envelope-fill"></i> ruthkalu@gmail.com
+                    </p>  
+                    <p class="text-center h5 mb-3">
+                        <i class="bi bi-telephone-fill"></i> (123) 456-7890
+                    </p> 
+                    <p class="text-center h5 mb-3">
+                        <i class="bi bi-facebook"></i> Ruth Kalu
+                    </p> 
+                    <p class="text-center h5 mb-3">
+                        <i class="bi bi-instagram"></i> Ruth Kalu
+                    </p> 
+                    <p class="text-center h5 mb-3">  
+                        <i class="bi bi-linkedin"></i> Ruth Kalu
+                    </p> 
+                </div>
+            </div>
+          </div>
     </section>
 
 
