--- a/contact.html
+++ b/contact.html
@@ -56,48 +56,72 @@
                     <form action="">
                       <div class="mb-3 row">
                         <div class="col-md-6">
-                          <label for="fname" class="form-label">First Name</label>
+                          <label for="fname" class="form-label"><strong>Firstname</strong><small>(Required)</small></label>
                           <input type="text" class="form-control" placeholder="Firstname" id="fname" aria-describedby="firstname">
                         </div>
                         <div class="col-md-6">
-                          <label for="lname" class="form-label">Last Name</label>
+                          <label for="lname" class="form-label"><strong>Lastname</strong><small>(Required)</small></label>
                           <input type="text" class="form-control" placeholder="Lastname" id="lname" aria-describedby="lastname">
                         </div>
                       </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" placeholder="email" id="email" aria-describedby="emailHelp">
-                        </div>
-                        <div class="mb-3">
-                            <label for="subject" class="form-label">Subject</label>
-                            <input type="text" class="form-control" placeholder="Subject" id="subject">
-                        </div>
-                        <div class="mb-3">
-                            <label for="mssg" class="form-label">Message</label>
-                            <textarea class="form-control" placeholder="Message" id="mssg" rows="3"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-outline-warning">Submit</button>
+                      <div class="mb-3">
+                          <label for="email" class="form-label"><strong>Email</strong><small>(Required)</small></label>
+                          <input type="email" class="form-control" placeholder="email" id="email" aria-describedby="emailHelp">
+                      </div>
+
+                      <div class="mb-3">
+                          <p class="form-label">
+                            <strong>
+                              Are you ready to prepare for the job search and know the job you want to apply for?
+                            </strong>
+                            <small>(Required)</small>
+                          </p>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="radio" id="Yes">
+                            <label class="form-check-label" for="Yes">
+                              Yes. I know the jobs I would like to apply for.
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="radio" id="Maybe">
+                            <label class="form-check-label" for="Maybe">
+                              I need to figure out my career direction.
+                            </label>
+                          </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="radio" id="No">
+                            <label class="form-check-label" for="No">
+                              I'm totally confused - help!
+                            </label>
+                          </div>
+                      </div>
+                      
+                      <div class="mb-3">
+                          <label for="mssg" class="form-label"><strong>Message</strong><small>(Required)</small></label>
+                          <textarea class="form-control" placeholder="Message" id="mssg" rows="3"></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-outline-warning">Submit</button>
                         
                     </form>
                 </div>
                 <div class="col-md-6">
                     <h2 class="text-center text-uppercase text-warning mb-5">Contact Details</h2>
-                    <p class="text-center h5 mb-3">
+                    <p class="text-center h5 mb-4">
                         <i class="bi bi-geo-alt-fill"></i> 1234 Street, City, State, Zip
                     </p>
-                    <p class="text-center h5 mb-3">
+                    <p class="text-center h5 mb-4">
                         <i class="bi bi-envelope-fill"></i> ruthkalu@gmail.com
                     </p>  
-                    <p class="text-center h5 mb-3">
+                    <p class="text-center h5 mb-4">
                         <i class="bi bi-telephone-fill"></i> (123) 456-7890
                     </p> 
-                    <p class="text-center h5 mb-3">
+                    <p class="text-center h5 mb-4">
                         <i class="bi bi-facebook"></i> Ruth Kalu
                     </p> 
-                    <p class="text-center h5 mb-3">
+                    <p class="text-center h5 mb-4">
                         <i class="bi bi-instagram"></i> Ruth Kalu
                     </p> 
-                    <p class="text-center h5 mb-3">  
+                    <p class="text-center h5 mb-4">  
                         <i class="bi bi-linkedin"></i> Ruth Kalu
                     </p> 
                 </div>
